objects/Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to keep the values for integration with USPS api</description>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Ip__c</fullName>
        <description>stores client IP for tracking shipment.</description>
        <label>Client Ip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Parameters__c</fullName>
        <description>comprise of what type of label image needs to be created.</description>
        <label>Image Parameters</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Service_Api__c</fullName>
        <label>Label Service Api</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdAddress2__c</fullName>
        <description>It contains the mindcrowd Address2.</description>
        <label>MindCrowdAddress2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdCity__c</fullName>
        <description>contains the city of mindcrowd office location.</description>
        <label>MindCrowdCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdFirmName__c</fullName>
        <description>consists of mindcrowd firm name .</description>
        <label>MindCrowdFirmName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdName__c</fullName>
        <label>MindCrowdName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdPhone__c</fullName>
        <description>consists of phone number of mindcrowd</description>
        <label>MindCrowdPhone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdState__c</fullName>
        <description>contains the state of mindcrowd address.</description>
        <label>MindCrowdState</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MindCrowdZip5__c</fullName>
        <description>contains zip5 of mindcrowd address.</description>
        <label>MindCrowdZip5</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPS_URL__c</fullName>
        <description>It contains the API URL.</description>
        <label>USPS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>This is the id given By USPS to Mindcrowd .</description>
        <label>UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>has weight of the packet</description>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eVSLabelUrl__c</fullName>
        <description>USPS URL for generating eVS Label</description>
        <label>eVSLabelUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>eVSLabel_Service__c</fullName>
        <description>consists of service which mindcrowd avails from USPS EVS LABEL API</description>
        <label>eVSLabel Service</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>